# code-trajectory

./: .gitignore  AGENT_GUIDE.md  README.md  README_ko.md  SPECIFICATION.md  main.py  pyproject.toml  reproduce_issue.py
src/code_trajectory/: recorder.py  server.py  trajectory.py
tests/: conftest.py  test_recorder.py  test_trajectory.py
